[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redact-prompt"
version = "0.1.0"
description = "Redact secrets from prompts before sending to LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["spacy>=3.0.0,<4.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["redact_prompt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
